; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sdio/extr_sdiob.c_sdio_read_direct_sc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sdio/extr_sdiob.c_sdio_read_direct_sc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdiob_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sdiob_softc*, i32, i32, i32*)* @sdio_read_direct_sc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sdio_read_direct_sc(%struct.sdiob_softc* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.sdiob_softc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.sdiob_softc* %0, %struct.sdiob_softc** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %11 = load %struct.sdiob_softc*, %struct.sdiob_softc** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @sdiob_rw_direct_sc(%struct.sdiob_softc* %11, i32 %12, i32 %13, i32 0, i32* %10)
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %4
  %18 = load i32*, i32** %8, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i32, i32* %10, align 4
  %22 = load i32*, i32** %8, align 8
  store i32 %21, i32* %22, align 4
  br label %23

23:                                               ; preds = %20, %17, %4
  %24 = load i32, i32* %9, align 4
  ret i32 %24
}

declare dso_local i32 @sdiob_rw_direct_sc(%struct.sdiob_softc*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
